# opengl_base

./: .gitignore  CMakeLists.txt
headers/: App.hpp  Camera.hpp  InputMap.hpp  PlaneMesh.hpp  Scene.hpp  Shader.hpp  Texture.hpp  TextureManager.hpp  VAO.hpp  Vertex.hpp  Window.hpp
libs/glad/: gl.c
libs/glad/include/glad/: gl.h
libs/stb_image/: stb_image.h
shaders/: fragment.glsl  vertex.glsl
src/: App.cpp  Camera.cpp  Shader.cpp  VAO.cpp  Window.cpp  main.cpp
